# ghostbrew

./: .gitignore  CHANGELOG.md  COMMANDS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PKGBUILD  README.md  SECURITY.md  brew.lua  build.rs  go.mod  go.sum  install.sh  main.go  pkgbuild.sh  scx-ghostbrew.service
.cargo/: audit.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: audit.yml  ci.yml  hardware-matrix.yml  main.yml  release.yml
archive/go-v0.1/: PKGBUILD
archive/go-v0.1/cmd/: LICENSE  completion.go  gpg.go  hooks.go  ignore.go  pkgmgr.go  upgrade.go
archive/go-v0.1/cmd/cmd/: search.go
benches/: scheduler_bench.rs  system_bench.sh
cmd/: completion.go  config.go  hook.go  info.go  install.go  installer.go  remove.go  root.go  search.go  tap.go  tui.go  upgrade.go
cmd/cmd/: root.go
completions/: README.md
docs/: ARCHITECTURE.md  BENCHMARKS.md  CHANGELOG.md  DL_SERVER.md  README.md  TROUBLESHOOTING.md  TUNING.md  benchmarks.md
docs/architecture/: overview.md
docs/benchmarks/: 9950x3d-dev-report.json  9950x3d-dev-report.txt  README.md
docs/features/: dl-server.md  support-bundle.md
docs/guides/: troubleshooting.md  tuning.md
examples/config/: ai-workload.toml  gaming.toml  ghostbrew.toml  productivity.toml  streaming.toml  vm-gaming.toml
examples/profiles/: apex-legends.toml  arc-raiders.toml  baldurs-gate3.toml  blender.toml  compile.toml  counter-strike2.toml  cyberpunk2077.toml  davinci-resolve.toml  dev-build.toml  diablo4.toml  elden-ring.toml  eve-multibox.toml  eve-online.toml  handbrake.toml  helldivers2.toml  kdenlive.toml  looking-glass.toml  marvel-rivals.toml  monster-hunter-wilds.toml  obs-studio.toml  overwatch2.toml  path-of-exile2.toml  satisfactory.toml  sunshine.toml  template.toml  valorant.toml  world-of-warcraft.toml  wuthering-waves.toml
man/: ghostbrew.1  scx_ghostbrew.1
release/: build-release-bundle.sh  install-system.sh
release/arch/: PKGBUILD
release/debian/: changelog  control  copyright  rules
release/fedora/: ghostbrew.spec
scripts/: benchmark-9950x3d-dev.sh  support-bundle.sh
src/: arena.rs  aur.rs  bpf_skel.rs  cgroup.rs  config.rs  container.rs  control.rs  core.rs  events.rs  flatpak.rs  gaming.rs  gpg.rs  gpu.rs  hooks.rs  intel.rs  lib.rs  main.rs  mangohud.rs  pacman.rs  pbo.rs  profiles.rs  topology.rs  tui.rs  utils.rs  vcache.rs  vm.rs
src/bpf/: ghostbrew.bpf.c  vmlinux.h
src/ghostbrew-0.2.0/: README.md
src/ghostbrew-0.2.0/archive/go-v0.1/cmd/: audit.go  install.go  installer.go
tests/: integration_tests.rs
