[package]
name = "scx_ghostbrew"
version = "0.1.0"
edition = "2024"
authors = ["ghostkellz <ckelley@ghostkellz.sh>"]
license = "GPL-2.0-only"
description = "GhostBrew - sched-ext BPF scheduler optimized for AMD Zen4/Zen5 X3D processors"
repository = "https://github.com/ghostkellz/ghostbrew"
keywords = ["scheduler", "sched-ext", "bpf", "amd", "zen5", "x3d", "gaming"]
categories = ["os", "hardware-support"]

[[bin]]
name = "scx_ghostbrew"
path = "src/main.rs"

[dependencies]
# sched-ext utilities (topology detection, BPF helpers, stats)
scx_utils = "1.0"

# BPF loading and management
libbpf-rs = "0.24"

# CLI argument parsing
clap = { version = "4.5", features = ["derive", "env"] }

# Error handling
anyhow = "1.0"

# Logging
log = "0.4"
env_logger = "0.11"

# System interfaces
libc = "0.2"
nix = { version = "0.29", features = ["sched", "signal", "user"] }

# Serialization (for config/stats)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Concurrency
crossbeam = "0.8"

# Signal handling
ctrlc = { version = "3.4", features = ["termination"] }

[build-dependencies]
# BPF compilation
libbpf-cargo = "0.24"

[profile.release]
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 1
