[package]
name = "scx_ghostbrew"
version = "0.2.0"
edition = "2024"
authors = ["ghostkellz <ckelley@ghostkellz.sh>"]
license = "GPL-2.0-only"
description = "GhostBrew - sched-ext BPF scheduler for AMD Zen4/Zen5 X3D (V-Cache) and Intel 12th-14th gen hybrid (P-core/E-core)"
repository = "https://github.com/ghostkellz/ghostbrew"
keywords = ["scheduler", "sched-ext", "bpf", "amd", "zen5", "x3d", "intel", "gaming", "cachyos"]
categories = ["os", "hardware-support"]

[[bin]]
name = "scx_ghostbrew"
path = "src/main.rs"

[dependencies]
# sched-ext utilities (topology detection, BPF helpers, stats)
scx_utils = "1.0"

# BPF loading and management
libbpf-rs = "0.24"

# CLI argument parsing
clap = { version = "4.5", features = ["derive", "env"] }
clap_complete = "4.5"

# Error handling
anyhow = "1.0"

# Logging
log = "0.4"
env_logger = "0.11"

# System interfaces
libc = "0.2"
nix = { version = "0.29", features = ["sched", "signal", "user"] }

# Serialization (for config/stats)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Config/profiles path handling
shellexpand = "3.1"
glob = "0.3"
dirs = "5.0"

# File watching for config hot-reload
notify = "7.0"

# Concurrency
crossbeam = "0.8"

# Signal handling
ctrlc = { version = "3.4", features = ["termination"] }

[build-dependencies]
# BPF compilation
libbpf-cargo = "0.24"

[profile.release]
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
opt-level = 3

# Native CPU optimizations (use with RUSTFLAGS="-C target-cpu=native")
# Best for CachyOS LTO kernels - matches kernel optimization level

[profile.release-lto]
inherits = "release"
lto = "fat"
codegen-units = 1

[profile.release-fast]
inherits = "release"
lto = "thin"
codegen-units = 4
# Faster builds, slightly less optimized

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "scheduler_bench"
harness = false

[profile.dev]
opt-level = 1

[profile.bench]
lto = "thin"
codegen-units = 2
